Update URLs in GitHub Pages
Project is now under https://github.com/jerryscript-project and
https://jerryscript.net . Update hardcoded URLs to use HTTPS, both
for JerryScript and IoT.js. Make non-hardcoded URLs use Jekyll's
`relative_url` filter to avoid mixed content errors on GH Pages.

JerryScript-DCO-1.0-Signed-off-by: Akos Kiss akiss@inf.u-szeged.hu

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,12 +9,12 @@
   <title>JavaScript engine for Internet of Things{% if page.title %}: {{ page.title }} {% endif %}</title>
 
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="{{ site.github.url }}/css/bootstrap.min.css" >
-  <link rel="stylesheet" href="{{ site.github.url }}/css/table.css">
-  <link rel="stylesheet" href="{{ site.github.url }}/css/bytecode.css">
-  <link rel="stylesheet" href="{{ site.github.url }}/css/block.css">
-  <link rel="stylesheet" href="{{ site.github.url }}/css/main.css">
-  <link rel="stylesheet" href="{{ site.github.url }}/css/img.css">
+  <link rel="stylesheet" href="{{ '/css/bootstrap.min.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/css/table.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/css/bytecode.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/css/block.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/css/main.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/css/img.css' | relative_url }}">
 
   <script>
     window.addEventListener("hashchange", function() { scrollBy(0, -50) });
