--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,25 +7,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.github.url }}/"><b>JerryScript</b></a>
+      <a class="navbar-brand" href="{{ '/' | relative_url }}"><b>JerryScript</b></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         {% if page.url == "/" %}
-          <li class="active"><a href="{{ site.github.url }}/">Home</a></li>
+          <li class="active"><a href="{{ '/' | relative_url }}">Home</a></li>
         {% else %}
-          <li><a href="{{ site.github.url }}/">Home</a></li>
+          <li><a href="{{ '/' | relative_url }}">Home</a></li>
         {% endif %}
-        <li><a href="http://www.iotjs.net">Powering <b>IoT.js</b></a></li>
+        <li><a href="https://www.iotjs.net">Powering <b>IoT.js</b></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% for p in site.pages %}
           {% if p.title %}
             {% if p.category == "navbar" %}
               {% if page.url == p.url %}
-                <li class="active"><a href="{{ p.url | prepend: site.github.url }}" >{{ p.title }}</a></li>
+                <li class="active"><a href="{{ p.url | relative_url }}" >{{ p.title }}</a></li>
               {% else %}
-                <li><a href="{{ p.url | prepend: site.github.url }}" >{{ p.title }}</a></li>
+                <li><a href="{{ p.url | relative_url }}" >{{ p.title }}</a></li>
               {% endif %}
             {% endif %}
           {% endif %}
@@ -35,7 +35,7 @@
             {% assign doclist = site.pages | sort: 'title' %}
             {% for p in doclist %}
               {% if p.title and p.category == "documents" %}
-                <li><a href="{{ p.url | prepend: site.github.url }}" >{{ p.title }}</a></li>
+                <li><a href="{{ p.url | relative_url }}" >{{ p.title }}</a></li>
               {% endif %}
             {% endfor %}
           </ul>
@@ -44,4 +44,4 @@
     </div><!--/.nav-collapse -->
   </div>
 </nav>
-<a href="https://github.com/pando-project/jerryscript"><img style="position: absolute; top: 50; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
+<a href="https://github.com/jerryscript-project/jerryscript"><img style="position: absolute; top: 50; right: 0; border: 0;" src="https://camo.githubusercontent.com/652c5b9acfaddf3a9c326fa6bde407b87f7be0f4/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6f72616e67655f6666373630302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"></a>
