--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
     <!-- Bootstrap core JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="{{ site.github.url }}/js/bootstrap.min.js"></script>
+    <script src="{{ '/js/bootstrap.min.js' | relative_url }}"></script>
 
   </body>
 </html>
